--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <h1>Emanuel Gonzalez Portfolio</h1>
+    <p>Soy programador Uruguayo experimentado</p>
+    <hr>
+    <a href="../2.4 Movie Ranking Project/index.html"><h2>Proyecto Peliculas</h2></a>
+    <img src="./assets/images/movie-ranking.png" height="200"/>
+
+    <a href="../3.4 Birthday Invite Project/index.html"><h2>Proyecto Cumple</h2></a>
+    <img src="./assets/images/birthday-invite.png" height="200"/>
+    <hr>
+    <a href="./public/contact.html"><h3>Contact</h3></a>
+    <a href="./public/about.html"><h3>About</h3></a> 
 </body>
 </html>
